<resources>
    <string name="app_name_release" translatable="false">Pokey</string>
    <string name="app_name_debug" translatable="false">Pokey Debug</string>
    <string name="app_name">Pokey</string>
    <string name="title_home">Home</string>
    <string name="title_relays">Relays</string>
    <string name="title_configuration">Configuration</string>
    <string name="pokey_is_running_in_background">Pokey is running in background</string>
    <string name="amber_not_found">Amber not installed</string>
    <string name="inbox_relays_error">Your DM inbox relays are not configured</string>
    <string name="relays_connection">Relays connection</string>
    <string name="configuration">Configuration</string>
    <string name="new_mention">New mention</string>
    <string name="new_reply">New reply</string>
    <string name="new_repost">New repost</string>
    <string name="new_quote">New quote</string>
    <string name="new_private">New private message</string>
    <string name="new_reaction">New reaction</string>
    <string name="new_zap">New Zap</string>
    <string name="new_follow">New Follow</string>
    <string name="unknown">Unknown</string>
    <string name="input_npub">Your nPub</string>
    <string name="invalid_npub">Invalid nPub</string>
    <string name="permissions_required">The app requires permissions to work</string>
    <string name="not_started">Pokey has not been started</string>
    <string name="relays">Your relays</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="logo">Logo</string>
    <string name="active_replies">New replies</string>
    <string name="active_reactions">New reactions</string>
    <string name="active_private_messages">New private messages</string>
    <string name="active_zaps">New zaps</string>
    <string name="active_quotes">New quotes</string>
    <string name="active_mentions">New mentions</string>
    <string name="active_reposts">New reposts</string>
    <string name="broadcast">Broadcast to other apps</string>
    <string name="public_inbox">Public inbox relays</string>
    <string name="private_inbox">Private inbox relays</string>
    <string name="publish">Publish</string>
    <string name="add">Add</string>
    <string name="reload">Reload</string>
    <string name="config_broadcast">Broadcast</string>
    <string name="config_notifications">Notifications</string>
    <string name="add_relay">Add relay</string>
    <string name="invalid_uri">Invalid URI</string>
    <string name="recommend_relay_size">The recommended size for an inbox list is 2-3 relays, are you sure you want to proceed?</string>
    <string name="recommend_relay_title">Relay inbox</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mute">Mute</string>
    <string name="add_account">Add account</string>
    <string name="primary_inbox_account">To avoid relay overload and battery drain, you can use only one account\'s inbox relays.</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="stopPokey">"Stop Pokey to perform this action "</string>
    <string name="addUsersToStart">Add at least one user or a subscription to start Pokey.</string>
    <string name="action_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_notifications">You didn\'t receive any notification yet</string>
    <string name="service">Service</string>
    <string name="connected_relays">%s connected relays</string>
    <string name="max_pubkeys">Skip events with # of mentions greater than</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_input">npub..., nevent.. or #hashtag</string>
    <string name="create_subscription">Create subscription</string>
    <string name="invalid_input">Invalid input</string>
    <string name="delete_subscription">Delete</string>
    <string name="subscription_hint">Subscriptions are fetch from your inbox relays</string>
    <string name="new_post">New post</string>
    <string name="mute_user">Mute user</string>
    <string name="mute_thread">Mute thread</string>
    <string name="private_mute_updated">Private mute list updated: %d elements</string>
    <string name="external_signer_not_found">External signer not found</string>
    <string name="invalid_private_mute">Invalid private mute list</string>
    <string name="not_private_elements">Your private mute list is empty</string>
    <string name="new_mute_list_notification_title">New mute list version</string>
    <string name="new_mute_list_notification_text">New version of your private mute list detected. Tap this notification to apply it.</string>
    <string name="cancel">Cancel</string>
    <string name="title_muted">Muted</string>
    <string name="public_mute_list">Public mute list</string>
    <string name="private_mute_list">Private mute list</string>
    <string name="user">User</string>
    <string name="thread">Thread</string>
</resources>
