<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notifications">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.koalasat.pokey.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_relays"
        android:name="com.koalasat.pokey.ui.relays.RelaysFragment"
        android:label="@string/title_relays"
        tools:layout="@layout/fragment_relays" />

    <fragment
        android:id="@+id/navigation_muted"
        android:name="com.koalasat.pokey.ui.muted.MutedFragment"
        android:label="@string/title_muted"
        tools:layout="@layout/fragment_muted" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="com.koalasat.pokey.ui.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.koalasat.pokey.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
