<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/dialog_custom_input.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="93dp">

        <EditText
            android:id="@+id/subscription_input"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:autofillHints="npub"
            android:ems="10"
            android:hint="@string/subscription_input"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/help_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/help_button"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_question_purple_24dp"
            android:background="@color/white"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/subscription_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subscription_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/submitSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_subscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/deleteSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_subscription"
            android:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
